# ml-biotite-thermobarometry

./: .gitignore  README.md  pyproject.toml
00_data_analysis/: 00a_MAS_Zones_in_PT.ipynb  00b_compositional_variation_of_biotites.ipynb  00c_compositional_variation_biotites_PTspace.ipynb  00d_comp_variation_sim_bioites_PTspace.ipynb
01_fit_natural_biotite/: 01a_BtThermobarometer.ipynb  01b_BtThermobarometer.ipynb  01c_BtThermobarometer_updatedDBFeb2025.ipynb  AA_k_training_MnFMAST.ipynb  AA_k_training_MnFMAST_index_minerals.ipynb  AA_k_training_TiXMg.ipynb  AA_kfold_val_datasets.ipynb  BB_k_training_MnFMAST_updatedDBFeb2025.ipynb  BB_kfold_val_datasets_updatedDBFeb2025.ipynb  Metapelite-Database_Bt_CLEAN_2024-02-03.xlsx  Metapelite-Database_Bt_CLEAN_2025-02-25.xlsx  Metapelite-Database_Bt_CLEAN_InclBt-Na2024-02-16.xlsx  feature_eng_testing.ipynb  hyperparam_testing.ipynb  hyperparam_testing_TiXMg.ipynb  plot_feature_eng_testing.ipynb  plot_hyperparam_testing.ipynb
02_pretraining/: baseline.ipynb  hyperparam_testing.ipynb  plot_hyperparam_testing.ipynb  priormodel_ds55Bt07.ipynb  priormodel_ds55BtT.ipynb  priormodel_ds62.ipynb
03_transfer_learning/: 03a_BtThermobarometer_finetuning.ipynb  baseline.ipynb  k_transfer_ds55Bt07.ipynb  k_transfer_ds55BtT.ipynb  k_transfer_ds62.ipynb  k_transfer_ds62_updatedDBFeb2025.ipynb  plot_transfer_technique.ipynb  transfer_technique.ipynb
04_model_selection_validation/: Metapelite-Database-Bt-2024-01-25_PTbins_only.xlsx  RMSE_kfold_crossvalidatio_compareDB_2024_2025.ipynb  RMSE_kfold_crossvalidation.ipynb  sequence_validation.ipynb  (+3 more)
(+613 files in other folders)
